# points

./: CMakeLists.txt  sync-external.sh
cmake/: qt5_executable.cmake
src/: CMakeLists.txt  FactoryRegistryModel.cpp  FactoryRegistryModel.h  IndexedComparable.h  MainWindow.cpp  MainWindow.h  ModelRoles.h  ParamModel.cpp  ParamModel.h  ParamModelDelegate.cpp  ParamModelDelegate.h  ParamView.cpp  ParamView.h  PointsOdeInitState.cpp  PointsOdeInitState.h  PointsView.cpp  PointsView.h  SimulationRunner.cpp  SimulationRunner.h  SimulationThread.cpp  SimulationThread.h  TaskConfig.cpp  TaskConfig.h  decl_metatype.h  icons.qrc  main.cpp  points_ode.cpp  points_ode.h  reg.cpp  vec_type.h
